--- a/quiz/templates/quiz/tutorial.html
+++ b/quiz/templates/quiz/tutorial.html
@@ -27,7 +27,7 @@
 			</p>
 			<div class="flex py-8 justify-center items-center">
 				<a href="{% url 'create' %}">
-					<button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
+					<button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8" id="create-quiz">Créer un quiz</button>
 				</a>
 			</div>
 		</div>
