--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -70,10 +70,10 @@
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
       <div class="flex justify-evenly -mx-16 px-8">
-        <a href="{% url 'create' %}">
+        <a href="{% url 'create' %}" id="create-quiz">
           <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
         </a>
-        <a href="{% url 'quiz-list' %}">
+        <a href="{% url 'quiz-list' %}" id="quiz-list">
           <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8 ">Voir les quiz</button>
         </a>
       </div>
