--- a/profiles/static/profiles/profile.css
+++ b/profiles/static/profiles/profile.css
@@ -1,3 +1,23 @@
+.Sciences {
+	background-color: #E8BBA9;
+}
+
+.Histoire-Geographie {
+	background-color: #8CD894;
+}
+
+.Langues {
+	background-color: #d88cd0;
+}
+
+.Francais {
+	background-color: #738BCE;
+}
+
+.Autres {
+	background-color: #BCBCBB;
+}
+
 #finished {
 	border-bottom-width: 4px;
 	border-color: #E8BBA9;
