--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -3,8 +3,7 @@
 
 {% block title %}Mon profil{% endblock %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'quiz/quiz_list.css' %}">
-<link rel="stylesheet" href="{% static 'account/profile.css' %}">
+<link rel="stylesheet" href="{% static 'profiles/profile.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -26,9 +25,9 @@
 		{% if quiz_participated|length %}
 		{% for quiz in quiz_participated %}
 		<div class="lg:w-1/3 w-full p-2">
-			<div class="{{ quiz.category_name }} p-2 h-40 rounded-lg">
+			<div class="{{ quiz.category_name }} p-2 h-40 rounded-lg" id="toto">
 				<a href="{% url 'take' url=quiz.url %}">
-					<div class="text-gray-700 text-center truncate">
+					<div class="text-gray-700 text-center truncate" id="{{ quiz.url }}">
 						{{ quiz.title }}
 					</div>
 					<div class="flex h-24 justify-center items-end mt-4">
@@ -57,7 +56,7 @@
 		<div class="lg:w-1/3 w-full p-2">
 			<div class="{{ quiz.category_name }} p-2 h-40 rounded-lg">
 				<a href="{% url 'statistics' url=quiz.url%}">
-					<div class="text-gray-700 text-center truncate">
+					<div class="text-gray-700 text-center truncate" id="{{ quiz.url }}">
 						{{ quiz.title }}
 					</div>
 					<div class="flex h-24 justify-center items-end mt-4">
