--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -13,7 +13,7 @@
   <div class="container mx-auto">
       <h1 class="text-2xl text-gray-900 font-bold py-8">Créer un quiz :</h1>
 
-      <p class="italic text-gray-700">Pour voir le détail de chaque champ, visitez le <a href="{% url 'tutorial' %}" class="text-blue-500">tutorial</a></p>
+      <p class="italic text-gray-700">Pour voir le détail de chaque champ, visitez le <a href="{% url 'tutorial' %}" class="text-blue-500" id="tutorial">tutorial</a></p>
 
       <form method="POST" id="quiz-form" data-subcategories-url="{% url 'ajax_load_subcategories' %}" class="ounded px-8 pt-6 pb-8 mb-4">
     {% csrf_token %}
