--- a/quiz/templates/quiz/statistics.html
+++ b/quiz/templates/quiz/statistics.html
@@ -12,7 +12,7 @@
 <div class="flex min-h-screen">
 	<div class="container mx-auto text-gray-700">
 		{% if message is not None %}
-			<p class="py-8 italic">{{ message }}</p>
+			<p class="px-4 py-8 italic" id="message">{{ message }}</p>
 		{% else %}
 			<div class="text-xl text-bold text-gray-700">
 				<p class="py-8">Statistiques du quiz : {{ title }}</p>
