--- a/quiz/templates/quiz/take.html
+++ b/quiz/templates/quiz/take.html
@@ -1,6 +1,7 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block title %}Titre du quiz{% endblock %}
+{% block title %}{{ title }}{% endblock %}
+
 
 {% block content %}
 <div class="flex min-h-screen">
@@ -12,24 +13,26 @@
 		<form method="POST" class="pl-2">
 			{% csrf_token %}
 			{% for form in forms %}
-			<div class="py-4 text-gray-700">
-				<p class="text-gray-800 font-bold">{{ form.1.capitalize }}</p> <!--- question's content -->
-				{% if form.0 == 'tf' %}
-					{{ form.2.as_p }} <!-- TF form -->
-				{% else %} <!-- MC form -->
-					<p>
-						<p><label>{{ form.2 }}</label></p>
-						<div>{{ form.5.answer1_correct }}</div>
-						<p><label>{{ form.3 }}</label></p>
-						<div>{{ form.5.answer2_correct }}</div>
-						<p><label>{{ form.4 }}</label></p>
-						<div>{{ form.5.answer3_correct }}</div>
-					</p>
-				{% endif %}
-			</div>
+				<div class="py-4 text-gray-700">
+					<!--- question's content -->
+					<p class="text-gray-800 font-bold">{{ form.1.capitalize }}</p>
+					{% if form.0 == 'tf' %}
+						{{ form.2.as_p }} <!-- TF form -->
+					{% else %} <!-- MC form -->
+						<p>
+							<p><label>{{ form.2 }}</label></p>
+							<div>{{ form.5.answer1 }}</div>
+							<p><label>{{ form.3 }}</label></p>
+							<div>{{ form.5.answer2 }}</div>
+							<p><label>{{ form.4 }}</label></p>
+							<div>{{ form.5.answer3 }}</div>
+						</p>
+					{% endif %}
+				</div>
 			{% endfor %}
+			
 			<div class="pt-4 pb-12">
-				<input type="submit" value="Envoyer" class="rounded-full text-white font-bold bg-blue-500 py-2 px-4">
+				<input type="submit" value="Envoyer" class="rounded-full text-white font-bold bg-blue-500 py-2 px-4" id="submit">
 			</div>
 		</form>
 	</div>
