--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -65,10 +65,14 @@
 
   <div class="explanations py-4">
     <div class="container mx-auto text-center pb-16">
-  	 <h3 class="text-center font-bold text-2xl text-gray-800 py-4">Explications</h3>
-     <p class="py-8">
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-      </p>
+  	 <h3 class="text-center font-bold text-2xl text-gray-700 py-4">Explications</h3>
+     <div class="py-8 text-gray-800">
+        <p>
+          Sur Fast & Quizy vous trouverez plein de quiz de tous niveaux dans de nombreuses catégories !
+          Le plus, c'est qu'à la fin de chaque quiz vous pourrez retrouver des conseils personnalisés selon vos résultats, idéal pour s'améliorer !
+          Si vous pensez en avoir les compétences, vous pouvez très facilement devenir à votre tour un créateur, et créer vos propres quiz pour aider les participants à s'améliorer !
+        </p>
+      </div>
       <div class="flex justify-evenly -mx-16 px-8">
         <a href="{% url 'create' %}" id="create-quiz">
           <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
