--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-<div class="first bg-contain">
+<div class="first bg-cover">
   <div class="pt-48 pb-32">
     <h1 class="text-center font-bold italic text-6xl text-gray-300">Fast & Quizy</h1>
     <p class="text-center text-2xl text-gray-300">
